.k8s/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitpanel
  namespace: <NAMESPACE>
  labels:
    app: gitpanel
    component: front
spec:
  selector:
    app: gitpanel
    component: app
    env: <ENV>
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitpanel
  namespace: <NAMESPACE>
  labels:
    app: gitpanel
    component: app
    env: <ENV>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitpanel
      component: app
      env: <ENV>
  template:
    metadata:
      namespace: <NAMESPACE>
      labels:
        app: gitpanel
        component: app
        env: <ENV>
    spec:
      containers:
        - name: gitpanel
          imagePullPolicy: Always
          image: <IMAGE-APP>
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: github-registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harpiatech-ingress
  namespace: harpiatech
  annotations:
    spec.ingressClassName: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size: "10M"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/client-max-body-size: "10M"
    nginx.ingress.kubernetes.io/large_client_header_buffers: "8 128k"
spec:
  rules:
    - host: gitpanel.harpia.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitpanel
                port:
                  number: 80
